optimizer/src/snapshots/spec_should_split_spread_props_with_additional_prop2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$((props) => {
	return (
		<div test="test" {...props}></div>
	);
});

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = (props)=>{
	return /*#__PURE__*/ _jsxSplit("div", {
		test: "test",
		..._getVarProps(props)
	}, _getConstProps(props), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    137
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
