optimizer/src/snapshots/spec_should_transform_component_with_normal_function.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(function() {
  const data = useSignal<Signal<any>[]>([]);
  const Inner = component$(function(props) {
    const data = props.data
    return <div>{data.value.map(item => <p onClick$={() => console.log(item.value.id)}>{item.value.id}</p>)}</div>
  })
  return <Inner data={data} />
})

============================= test.tsx_Foo_component_Inner_component_div_p_on_click_KJykIBkozgo.js (ENTRY POINT)==

export const Foo_component_Inner_component_div_p_on_click_KJykIBkozgo = (_, _1, item)=>console.log(item.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_div_p_on_click_KJykIBkozgo",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component_div_p_on_click",
  "hash": "KJykIBkozgo",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_div_p_on_click_KJykIBkozgo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_AuJ9mTBx5YA = ()=>import("./test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA");
export const Foo_component_HTDRsvUbLiE = function() {
	const data = useSignal([]);
	const Inner = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_AuJ9mTBx5YA, "Foo_component_Inner_component_AuJ9mTBx5YA", [data]));
	return _jsxSorted(Inner, null, { data }, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    373
  ]
}
*/
============================= test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useLexicalScope } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_KJykIBkozgo = ()=>import("./test.tsx_Foo_component_Inner_component_div_p_on_click_KJykIBkozgo");
const _hf0 = (p0)=>p0.value.id;
const _hf0_str = "p0.value.id";
export const Foo_component_Inner_component_AuJ9mTBx5YA = function(props) {
	const [data] = useLexicalScope();
	const data = props.data;
	const Foo_component_Inner_component_div_p_on_click_KJykIBkozgo = /*#__PURE__*/ qrl(i_KJykIBkozgo, "Foo_component_Inner_component_div_p_on_click_KJykIBkozgo");
	return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((item)=>/*#__PURE__*/ _jsxSorted("p", {
		"on:click": Foo_component_Inner_component_div_p_on_click_KJykIBkozgo,
		"q:p": item
	}, null, _fnSignal(_hf0, [item], _hf0_str), 1, null)), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_AuJ9mTBx5YA",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component",
  "hash": "AuJ9mTBx5YA",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA",
  "path": "",
  "extension": "js",
  "parent": "$1",
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    175,
    339
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_AuJ9mTBx5YA = ()=>import("./test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
