optimizer/src/snapshots/spec_should_transform_event_names_without_jsx_transpile.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import mongo from 'mongodb';

export const Greeter = component$(() => {
	// Double count watch
	useTask$(async () => {
		await mongo.users();
	});
	return (
		<div>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
			<div onClick$={() => {}}/>
		</div>
	)
});

============================= test.tsx_Greeter_component_div_div_onClick_1_nfA5XvcUYg0.tsx (ENTRY POINT)==

export const Greeter_component_div_div_onClick_1_nfA5XvcUYg0 = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_onClick_1_nfA5XvcUYg0",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_onClick_1",
  "hash": "nfA5XvcUYg0",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_onClick_1_nfA5XvcUYg0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Greeter_component_useTask_ibjq2Rfokxw.tsx (ENTRY POINT)==

import mongo from "mongodb";
export const Greeter_component_useTask_ibjq2Rfokxw = async ()=>{
	await mongo.users();
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_useTask_ibjq2Rfokxw",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_useTask",
  "hash": "ibjq2Rfokxw",
  "canonicalFilename": "test.tsx_Greeter_component_useTask_ibjq2Rfokxw",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    153,
    192
  ]
}
*/
============================= test.tsx_Greeter_component_div_div_onClick_2_9AVC00jYWE0.tsx (ENTRY POINT)==

export const Greeter_component_div_div_onClick_2_9AVC00jYWE0 = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_div_onClick_2_9AVC00jYWE0",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_div_onClick_2",
  "hash": "9AVC00jYWE0",
  "canonicalFilename": "test.tsx_Greeter_component_div_div_onClick_2_9AVC00jYWE0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_9AVC00jYWE0 = ()=>import("./test.tsx_Greeter_component_div_div_onClick_2_9AVC00jYWE0");
const i_nfA5XvcUYg0 = ()=>import("./test.tsx_Greeter_component_div_div_onClick_1_nfA5XvcUYg0");
const i_ibjq2Rfokxw = ()=>import("./test.tsx_Greeter_component_useTask_ibjq2Rfokxw");
export const Greeter_component_n7HuG2hhU0Q = ()=>{
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ibjq2Rfokxw, "Greeter_component_useTask_ibjq2Rfokxw"));
	return <div>
			<div on:click={/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_ibjq2Rfokxw, "Greeter_component_useTask_ibjq2Rfokxw"))} />
			<div on:click={/*#__PURE__*/ qrl(i_nfA5XvcUYg0, "Greeter_component_div_div_onClick_1_nfA5XvcUYg0")} />
			<div on:click={/*#__PURE__*/ qrl(i_9AVC00jYWE0, "Greeter_component_div_div_onClick_2_9AVC00jYWE0")} />
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    112,
    316
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_ibjq2Rfokxw = ()=>import("./test.tsx_Greeter_component_useTask_ibjq2Rfokxw");
const i_n7HuG2hhU0Q = ()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_n7HuG2hhU0Q, "Greeter_component_n7HuG2hhU0Q"));


None
== DIAGNOSTICS ==

[]
