optimizer/src/snapshots/spec_should_transform_multiple_event_handlers.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(function() {
  const data = useSignal<Signal<any>[]>([]);
  return <div>
	{data.value.map(row => (
	  <div onClick$={() => console.log(row.value.id)} onMouseOver$={() => console.log('over' + row.value.id)}>
		<p onClick$={() => console.log('inner' + row.value.id)}>{item.value.id}</p>
	  </div>
	))}
  </div>;
})

============================= test.tsx_Foo_component_div_div_p_on_click_FWFSo0km4Aw.js (ENTRY POINT)==

export const Foo_component_div_div_p_on_click_FWFSo0km4Aw = (_, _1, row)=>console.log("inner" + row.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_p_on_click_FWFSo0km4Aw",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_p_on_click",
  "hash": "FWFSo0km4Aw",
  "canonicalFilename": "test.tsx_Foo_component_div_div_p_on_click_FWFSo0km4Aw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_div_on_click_1u04rzUKERk.js (ENTRY POINT)==

export const Foo_component_div_div_on_click_1u04rzUKERk = (_, _1, row)=>console.log(row.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_on_click_1u04rzUKERk",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_on_click",
  "hash": "1u04rzUKERk",
  "canonicalFilename": "test.tsx_Foo_component_div_div_on_click_1u04rzUKERk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_FWFSo0km4Aw = ()=>import("./test.tsx_Foo_component_div_div_p_on_click_FWFSo0km4Aw");
const i_ZhZKB7eezqI = ()=>import("./test.tsx_Foo_component_div_div_on_mouse_over_ZhZKB7eezqI");
const i_1u04rzUKERk = ()=>import("./test.tsx_Foo_component_div_div_on_click_1u04rzUKERk");
export const Foo_component_HTDRsvUbLiE = function() {
	const data = useSignal([]);
	const Foo_component_div_div_on_click_1u04rzUKERk = /*#__PURE__*/ qrl(i_1u04rzUKERk, "Foo_component_div_div_on_click_1u04rzUKERk");
	const Foo_component_div_div_on_mouse_over_ZhZKB7eezqI = /*#__PURE__*/ qrl(i_ZhZKB7eezqI, "Foo_component_div_div_on_mouse_over_ZhZKB7eezqI");
	const Foo_component_div_div_p_on_click_FWFSo0km4Aw = /*#__PURE__*/ qrl(i_FWFSo0km4Aw, "Foo_component_div_div_p_on_click_FWFSo0km4Aw");
	return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row)=>/*#__PURE__*/ _jsxSorted("div", {
		"on:click": Foo_component_div_div_on_click_1u04rzUKERk,
		"on:mouseover": Foo_component_div_div_on_mouse_over_ZhZKB7eezqI,
		"q:p": row
	}, null, /*#__PURE__*/ _jsxSorted("p", {
		"on:click": Foo_component_div_div_p_on_click_FWFSo0km4Aw,
		"q:p": row
	}, null, item.value.id, 1, null), 3, null)), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    87,
    398
  ]
}
*/
============================= test.tsx_Foo_component_div_div_on_mouse_over_ZhZKB7eezqI.js (ENTRY POINT)==

export const Foo_component_div_div_on_mouse_over_ZhZKB7eezqI = (_, _1, row)=>console.log("over" + row.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_on_mouse_over_ZhZKB7eezqI",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_on_mouse_over",
  "hash": "ZhZKB7eezqI",
  "canonicalFilename": "test.tsx_Foo_component_div_div_on_mouse_over_ZhZKB7eezqI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onMouseOver$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
