optimizer/src/snapshots/spec_should_transform_nested_loops.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(function() {
  const data = useSignal<Signal<any>[]>([]);
  const data2 = useSignal<Signal<any>[]>([]);
  return <div>
	{data.value.map(row => (
	  <div onClick$={() => console.log(row.value.id)}>
		{data2.value.map(item => (
		  <p onClick$={() => console.log(row.value.id, item.value.id)}>{row.value.id}-{item.value.id}</p>
		))}
	  </div>
	))}
  </div>;
})

============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_5OQc040LebY = ()=>import("./test.tsx_Foo_component_div_map_div_map_p_onClick_5OQc040LebY");
const i_mfLVIFxdDiU = ()=>import("./test.tsx_Foo_component_div_map_div_onClick_mfLVIFxdDiU");
const _hf0 = (p0)=>p0.value.id;
const _hf0_str = "p0.value.id";
export const Foo_component_HTDRsvUbLiE = function() {
	const data = useSignal([]);
	const data2 = useSignal([]);
	const Foo_component_div_map_div_onClick_mfLVIFxdDiU = /*#__PURE__*/ qrl(i_mfLVIFxdDiU, "Foo_component_div_map_div_onClick_mfLVIFxdDiU");
	const Foo_component_div_map_div_map_p_onClick_5OQc040LebY = /*#__PURE__*/ qrl(i_5OQc040LebY, "Foo_component_div_map_div_map_p_onClick_5OQc040LebY", [row]);
	return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row)=>/*#__PURE__*/ _jsxSorted("div", {
		"on:click": Foo_component_div_map_div_onClick_mfLVIFxdDiU,
		"q:p": row
	}, null, data2.value.map((item)=>/*#__PURE__*/ _jsxSorted("p", {
		"on:click": Foo_component_div_map_div_map_p_onClick_5OQc040LebY,
		"q:p": item
	}, null, [
		row.value.id,
		"-",
		_fnSignal(_hf0, [item], _hf0_str)
	], 1, null)), 1, null)), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    87,
    445
  ]
}
*/
============================= test.tsx_Foo_component_div_map_div_onClick_mfLVIFxdDiU.js (ENTRY POINT)==

export const Foo_component_div_map_div_onClick_mfLVIFxdDiU = (_, _1, row)=>console.log(row.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_map_div_onClick_mfLVIFxdDiU",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_map_div_onClick",
  "hash": "mfLVIFxdDiU",
  "canonicalFilename": "test.tsx_Foo_component_div_map_div_onClick_mfLVIFxdDiU",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Foo_component_div_map_div_map_p_onClick_5OQc040LebY.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Foo_component_div_map_div_map_p_onClick_5OQc040LebY = (_, _1, item)=>{
	const [row] = useLexicalScope();
	return console.log(row.value.id, item.value.id);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_map_div_map_p_onClick_5OQc040LebY",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_map_div_map_p_onClick",
  "hash": "5OQc040LebY",
  "canonicalFilename": "test.tsx_Foo_component_div_map_div_map_p_onClick_5OQc040LebY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
