optimizer/src/snapshots/spec_should_transform_qrls_in_ternary_expression.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
	const enabled = useSignal(false);
	const input = useSignal("");

  return (
     <input
		id="input"
		onInput$={
		enabled.value
			? $((ev, el) => {
				input.value = el.value;
			})
			: undefined
		}
		onFocus$={() => {
			enabled.value = true;
		}}
	/>
  );
});

============================= test.tsx_FieldInput_component_input_on_focus_dCaaZb8Y0g8.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const FieldInput_component_input_on_focus_dCaaZb8Y0g8 = ()=>{
	const [enabled] = useLexicalScope();
	enabled.value = true;
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_on_focus_dCaaZb8Y0g8",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_on_focus",
  "hash": "dCaaZb8Y0g8",
  "canonicalFilename": "test.tsx_FieldInput_component_input_on_focus_dCaaZb8Y0g8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onFocus$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_FieldInput_component_input_on_input_1_vUwhwQBoWlo.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const FieldInput_component_input_on_input_1_vUwhwQBoWlo = (ev, el)=>{
	const [input] = useLexicalScope();
	input.value = el.value;
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_on_input_1_vUwhwQBoWlo",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_on_input_1",
  "hash": "vUwhwQBoWlo",
  "canonicalFilename": "test.tsx_FieldInput_component_input_on_input_1_vUwhwQBoWlo",
  "path": "",
  "extension": "js",
  "parent": "onInput",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    243,
    289
  ]
}
*/
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_dCaaZb8Y0g8 = ()=>import("./test.tsx_FieldInput_component_input_on_focus_dCaaZb8Y0g8");
const i_vUwhwQBoWlo = ()=>import("./test.tsx_FieldInput_component_input_on_input_1_vUwhwQBoWlo");
export const FieldInput_component_V4XAtJSTRKg = ()=>{
	const enabled = useSignal(false);
	const input = useSignal("");
	return /*#__PURE__*/ _jsxSorted("input", {
		"on:focus": /*#__PURE__*/ qrl(i_dCaaZb8Y0g8, "FieldInput_component_input_on_focus_dCaaZb8Y0g8", [enabled]),
		"on:input": /*#__PURE__*/ qrl(i_vUwhwQBoWlo, "FieldInput_component_input_on_input_1_vUwhwQBoWlo", [input])
	}, { id: "input" }, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    97,
    370
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_vUwhwQBoWlo = ()=>import("./test.tsx_FieldInput_component_input_on_input_1_vUwhwQBoWlo");
const i_V4XAtJSTRKg = ()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_V4XAtJSTRKg, "FieldInput_component_V4XAtJSTRKg"));


None
== DIAGNOSTICS ==

[]
